Added settings for affecting editor simulation

--- a/Water_Features/l10n/en-US.csv
+++ b/Water_Features/l10n/en-US.csv
@@ -103,8 +103,14 @@ Tooltip.LABEL[YY.WT.MustTouchBorder],Sea water sources must touch the map border
 Tooltip.LABEL[YY.WT.LockElevation],Right click to designate the water surface elevation.
 Options.GROUP:Experimental,"Experimental"
 Options.OPTION:Fluidness,"Fluidness"
-Options.OPTION_DESCRIPTION:Fluidness,"Experimental option to alter the Fluidness factor of the water system."
+Options.OPTION_DESCRIPTION:Fluidness,"Alter the Fluidness factor of the water system. Let's see what this does."
 Options.OPTION:ResetExperimentalSettingsButton,"Reset Experimental Settings"
 Options.OPTION_DESCRIPTION:ResetExperimentalSettingsButton,"On confirmation, resets Experimental Settings."
 Options.WARNING:ResetExperimentalSettingsButton,"Reset Experimental Settings?"
 Editor.TOOL[Yenyang's Water Tool],"Yenyang's Water Tool"
+Options.OPTION:WaterToolSettingsAffectEditorSimulation,"Water Tool Settings Affect Editor Simulation"
+Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation,"Allows the settings in the Water Tool tab to affect the editor simulation such as evaporation, fluidness, and Water Clean Up Cycle."
+Options.OPTION:SeasonalStreamsAffectEditorSimulation,"Seasonal Streams Settings Affect Editor Simulation"
+Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation,"Allows the settings in the Seasonal Streams tab to affect the editor simulation and alter stream flowrates."
+Options.OPTION:WavesAndTidesAffectEditorSimulation,"Waves and Tides Settings Affect Editor Simulation"
+Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation,"Allows the settings in the Waves and Tabs tab to affect the editor simulation by oscillating sea level and altering damping value."
