--- a/Water_Features/l10n/en-US.csv
+++ b/Water_Features/l10n/en-US.csv
@@ -115,5 +115,5 @@ Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation,"Allows the set
 Options.OPTION:WavesAndTidesAffectEditorSimulation,"Waves and Tides Settings Affect Editor Simulation"
 Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation,"Allows the settings in the Waves and Tabs tab to affect the editor simulation by oscillating sea level and altering damping value."
 YY_WATER_FEATURES_DESCRIPTION.ElevationChange,"Water Tool will change elevations or rate of existing water sources by left clicking an existing water source and dragging up or down."
-YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource,"Water Tool will place water sources with left click."
+YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource,"Water Tool will place water sources with left click, and remove water sources with right click."
 YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource,"Water Tool will move existing water sources. Target elevations of existing water sources will not change."
