--- a/Water_Features/l10n/en-US.csv
+++ b/Water_Features/l10n/en-US.csv
@@ -118,3 +118,4 @@ Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation,"Allows the setti
 YY_WATER_FEATURES_DESCRIPTION.ElevationChange,"Water Tool will change target elevations of existing water sources by hovering over existing water source, left clicking, holding, dragging and releasing at new elevation. Usually dragging out raises, and dragging in lowers, but it's really just releasing at the desired elevation. Keep the cursor within playable area for reliability. Right click to cancel."
 YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource,"Water Tool will place water sources with left click, and remove water sources with right click."
 YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource,"Water Tool will move existing water sources. Target elevations of existing water sources will not change. Right click to cancel."
+YY_WATER_FEATURES_DESCRIPTION.RadiusChange,"Water Tool will change radius of water sources. Right click to cancel."
