--- a/Water_Features/l10n/pt-BR.csv
+++ b/Water_Features/l10n/pt-BR.csv
@@ -34,7 +34,7 @@
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveFrequency]","Frequência das ondas","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveFrequency]","Frequência para ondas por dia.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TideHeight]","Altura da Maré","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TideHeight]","As marés são as maiores ondas e fazem com que o mar suba e desça ao longo da costa. As marés podem adicionar gráficos arenosos ao longo da costa, mas a areia pode não persistir durante todo o tempo entre a maré baixa e a maré alta. As marés são inferiores ao nível do mar no mapa original e não causam inundações. Mapas como o de São Francisco, com mar raso, precisarão de ondas e marés com alturas menores para evitar que grandes áreas de área não jogável se transformem em areia seca. ","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TideHeight]","As marés são as maiores ondas e fazem com que o mar suba e desça ao longo da costa. As marés podem adicionar gráficos arenosos ao longo da costa, mas a areia pode não persistir durante todo o tempo entre a maré baixa e a maré alta. As marés são inferiores ao nível do mar no mapa original e não causam inundações. Mapas como o de São Francisco, com mar raso, precisarão de ondas e marés com alturas menores para evitar que grandes áreas de área não jogável se transformem em areia seca.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TideClassification]","Classificação da Maré","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TideClassification]","As marés diurnas têm uma ponta alta e uma baixa por dia. Semidiurnas tem duas marés elevadas e duas marés baixas por dia.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Damping]","Umidificação","","","","","","","","","","","",""
@@ -70,7 +70,7 @@
 "YY_WATER_FEATURES.radius-down-arrow","Reduzir Raio","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","Reduz o raio.","","","","","","","","","","","",""
 "YY_WATER_FEATURES.radius-up-arrow","Aumentar o Raio","","","","","","","","","","","",""
-"YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","Aumenta o raio...","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","Aumenta o raio.","","","","","","","","","","","",""
 "YY_WATER_FEATURES.min-depth-down-arrow","Reduzir profundidade mínima","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-down-arrow","Reduz a profundidade mínima.","","","","","","","","","","","",""
 "YY_WATER_FEATURES.min-depth-up-arrow","Aumentar profundidade mínima","","","","","","","","","","","",""
